| Summary: | ASTERISK-26668: core: Malformed pattern matching extension (various factors) results in crash | ||
| Reporter: | xrobau (xrobau) | Labels: | |
| Date Opened: | 2016-12-21 16:44:55.000-0600 | Date Closed: | 2017-03-15 19:15:16 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | General |
| Versions: | 13.13.1 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | FreePBX 13 | Attachments: | |
| Description: | The extensions_additional.conf file (sent via email, as it contains confidential information) causes asterisk to crash when read.
There are syntax errors in it (matches don't start with _, starting at line 6861), and when they were fixed, asterisk stopped crashing. However, when they were removed AGAIN, asterisk STILL wasn't crashing. At this point we managed to dig up a COPY of the exact file that was causing the crash, and confirmed that it crashes on another machine. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2016-12-21 16:44:56.172-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: George Joseph (gjoseph) 2016-12-22 07:23:56.123-0600 Completely reproduceable... exten => 999999999[2-5],1(123456789012),Noop(Some Message) will do it. If not at startup, do a "dialplan reload" a few times. The missing leading '_' in the pattern, the length of the pattern, and the length of the label are all factors. By: xrobau (xrobau) 2017-02-16 19:43:54.203-0600 Still an issue in 13.14.0, still causing crashes. By: Friendly Automation (friendly-automation) 2017-03-15 19:15:17.710-0500 Change 5208 merged by zuul: pbx.c: Fix crash from malformed exten pattern. [https://gerrit.asterisk.org/5208|https://gerrit.asterisk.org/5208] By: Friendly Automation (friendly-automation) 2017-03-15 19:26:17.820-0500 Change 5207 merged by zuul: pbx.c: Fix crash from malformed exten pattern. [https://gerrit.asterisk.org/5207|https://gerrit.asterisk.org/5207] By: Friendly Automation (friendly-automation) 2017-03-15 19:57:18.306-0500 Change 5206 merged by zuul: pbx.c: Fix crash from malformed exten pattern. [https://gerrit.asterisk.org/5206|https://gerrit.asterisk.org/5206] | ||